solved spacing issue in header

--- a/sites/all/themes/hk_theme/sass/components/_leaflet.scss
+++ b/sites/all/themes/hk_theme/sass/components/_leaflet.scss
@@ -1662,9 +1662,16 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
           }
         }
         a {
+	   .icon-hk-icon-telephone,
+	   .icon-hk-icon-favorite,
+	   .icon-hk-icon-search {
+	      @media (max-width: 992px) {
+	        margin-top: 25px;
+	      }
+	   }	
           .icon-hk-icon-telephone {
             @media (max-width: 992px) {
-              margin-top: 16px;
+              margin-top: 25px;
             }
             /*height: 15px;
             width: 15px;
@@ -1673,7 +1680,7 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
             background-size: 100% auto;
             background-position: center;*/
           }
-        }
+        }	
         .menu-tooltip {
           position: absolute;
           top: auto;
@@ -1720,6 +1727,6 @@ body.not-front.not-logged-in.page-hybridauth { background: none; }
   }
 }
 .language-switcher {
-  top: 216px !important;
+  top: 298px !important;
 }
 
